# Haskell-Programming-From-First-Principles

Ch13/gimmePerson/: README.md  Setup.hs  gimmePerson.cabal
Ch13/gimmePerson/src/: GimmePerson.hs
Ch13/hangman/: hangman.cabal
Ch13/hangman/.stack-work/install/9d660cc9/flag-cache/: random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  split-0.2.3.3-69JBPqG5rhJEaFzFyiVOGW
Ch13/hangman/src/: Main.hs
Ch13/palindrome/: Setup.hs  palindrome.cabal
Ch13/palindrome/src/: palindrome.hs
Ch14/addition/: Addition.hs  addition.cabal
Ch14/arbitrary/: arbitrary.cabal
Ch14/arbitrary/.stack-work/install/df451585/flag-cache/: QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  arbitrary-0.1.0.0  primitive-0.6.3.0-CXy1O9sQYlI58rn9KQkFyo  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  tf-random-0.5-H0EZh6X3duX25gCCL9n0I3
Ch14/arbitrary/src/: Main.hs
Ch14/morse/src/: Main.hs  Morse.hs
Ch15/: test.hs  test2.hs
Ch15/orphan-instance/: Listy  ListyInstances.hs
Ch16/: ReplaceExperiment.hs  functors1.hs  functors2.hs  functors4.hs
Ch22/: experiment2.hs
